Bug 689967 - error code -15 in pcl5fts/fts.0810
Summary: error code -15 in pcl5fts/fts.0810
Status: NOTIFIED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: PCL interpreter (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-14 20:53 UTC by Ralph Giles
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Giles 2008-07-14 20:53:08 UTC
GhostPCL errors out in the fts.0810 file, apparently in the 2:2 panel of the
initial page.

main/obj/pcl6 -dBATCH -dNOPAUSE ../tests_private/pcl/pcl5cfts/fts.0810
Warning interpreter exited with error code -15
Flushing to end of job

Many files actually report this error, but this one in particular shows up with
the bitcmyk and bitrgb devices at 600 dpi, which were recently added to the
cluster regressions, because no output is ever produced. A partial ppmraw file
is produced at 600 dpi, which is why it wasn't noticed earlier.
Comment 1 Henry Stiles 2008-07-17 10:14:39 UTC
The problem in fts.0810 is fixed in ghostpcl 3115.  Other problems should be
reported separately.