Partially fixes bug #689967 (test file fts.0810 returning -15).  The report claims there are other errors, local regression testing indicates fts.0810 is the only file affected by this particular change.  The configure image data parameters for long form were not being properly ignored when pcl is configured to allow color conversion to occur in the device (the default).  Also removes a ranting comment.

From a patch to the private repository by Henry Stiles, r3115.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8849 a1074d23-0009-0410-80fe-cf8c14f379e6